--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -28,15 +28,15 @@ jobs:
       - name: Set up SSH agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: {% raw %}${{ secrets.DO_SSH_KEY }}{% endraw %} # The SSH private key stored in GitHub secrets.
+          ssh-private-key: ${{ secrets.DO_SSH_KEY }} # The SSH private key stored in GitHub secrets.
 
       - name: Sync files to DigitalOcean Droplet using rsync
         run: |
           # Define SSH connection info
           SSH_USER="nico"
-          DO_DROPLET_IP={% raw %}${{ secrets.DO_DROPLET_IP }}{% endraw %}
+          DO_DROPLET_IP=${{ secrets.DO_DROPLET_IP }}
           APP_NAME="WebShop"
-          REMOTE_PATH="/home/jetty/deployment/site/$APP_NAME/"
+          REMOTE_PATH="~/deployment/site/$APP_NAME/"
 
           # Sync build output to the Droplet using rsync
           rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ./dist/ $SSH_USER@$DO_DROPLET_IP:$REMOTE_PATH
