--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -36,7 +36,7 @@ jobs:
           SSH_USER="nico"
           DO_DROPLET_IP=${{ secrets.DO_DROPLET_IP }}
           APP_NAME="WebShop"
-          REMOTE_PATH="~/deployment/site/$APP_NAME/"
+          REMOTE_PATH="home/nico/deployment/site/$APP_NAME/"
 
           # Sync build output to the Droplet using rsync
           rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ./dist/ $SSH_USER@$DO_DROPLET_IP:$REMOTE_PATH
