--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,42 +2,40 @@ name: Deploy Frontend to DigitalOcean
 
 on:
   push:
-    branches: [main] # Trigger on direct pushes to the main branch
+    branches: [main]
   pull_request:
-    branches: [main] # Trigger when a pull request targeting main is merged/closed
+    branches: [main]
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest # The type of runner for the job.
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4 # Checks out the repository under $GITHUB_WORKSPACE, so your workflow can access it.
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v4 # Updated to use the latest version of the action
+        uses: actions/setup-node@v4
         with:
-          node-version: '20.x' # Sets up Node.js version 20
+          node-version: '20.x'
 
       - name: Install dependencies
-        run: npm install # Installs dependencies defined in package.json.
+        run: npm install
 
       - name: Build the React project
-        run: npm run build # Runs the build script specified in package.json.
+        run: npm run build
 
       - name: Decode and add SSH key to agent
         run: |
-        echo "${{ secrets.DO_SSH_KEY }}" | base64 --decode > ~/.ssh/deploy_key
-        chmod 600 ~/.ssh/deploy_key
-        ssh-add ~/.ssh/deploy_key
+          echo "${{ secrets.DO_SSH_KEY }}" | base64 --decode > ~/.ssh/deploy_key
+          chmod 600 ~/.ssh/deploy_key
+          ssh-add ~/.ssh/deploy_key
 
       - name: Sync files to DigitalOcean Droplet using rsync
         run: |
-          # Define SSH connection info
           SSH_USER="nico"
           DO_DROPLET_IP=${{ secrets.DO_DROPLET_IP }}
           APP_NAME="WebShop"
-          REMOTE_PATH="home/nico/deployment/site/$APP_NAME/"
+          REMOTE_PATH="~/deployment/site/$APP_NAME/"
 
-          # Sync build output to the Droplet using rsync
           rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ./dist/ $SSH_USER@$DO_DROPLET_IP:$REMOTE_PATH
