--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,15 @@ jobs:
       - name: Build the React project
         run: npm run build
 
+      - name: Set up SSH agent
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.DO_SSH_KEY }}
+
       - name: Decode and add SSH key to agent
         run: |
+          # Create the .ssh directory if it doesn't exist
+          mkdir -p ~/.ssh
           echo "${{ secrets.DO_SSH_KEY }}" | base64 --decode > ~/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
           ssh-add ~/.ssh/deploy_key
