--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,10 @@ jobs:
       - name: Sync files to DigitalOcean Droplet using rsync
         run: |
           # Define SSH connection info
-          SSH_USER="jetty"
+          SSH_USER="nico"
           DO_DROPLET_IP={% raw %}${{ secrets.DO_DROPLET_IP }}{% endraw %}
-          APP_NAME="timer"
-          REMOTE_PATH="/home/jetty/deployment/site/$APP_NAME/"
+          APP_NAME="WebShop"
+          REMOTE_PATH="/home/nico/deployment/site/$APP_NAME/"
 
           # Sync build output to the Droplet using rsync
           rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no" ./dist/ $SSH_USER@$DO_DROPLET_IP:$REMOTE_PATH
